--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
           </ul>
           <ul class="contacts-head">
             <li>
-              <svg class="contacts-icon-mail">
-                <use href="./images/symbol-defs.svg#icon-mail"></use>
-              </svg>
               <a href="mailto:info@devstudio.com" class="link mail"
+                ><svg class="contacts-icon-mail">
+                  <use href="./images/symbol-defs.svg#icon-mail"></use></svg
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <svg class="contacts-icon-phone">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
               <a href="tel:+380961111111" class="link phone"
+                ><svg class="contacts-icon-phone">
+                  <use
+                    href="./images/symbol-defs.svg#icon-smartphone"
+                  ></use></svg
                 >+38 096 111 11 11</a
               >
             </li>
@@ -65,7 +65,7 @@
         <div class="container">
           <ul class="columns">
             <li class="columns-item">
-              <svg class="columns-icon">
+              <svg class="columns-icon" width="270px" height="120px">
                 <use href="./images/symbol-defs.svg#icon-antenna"></use>
               </svg>
               <h3 class="hang-title">Внимание к деталям</h3>
@@ -75,7 +75,7 @@
               </p>
             </li>
             <li class="columns-item">
-              <svg class="columns-icon">
+              <svg class="columns-icon" width="270px" height="120px">
                 <use href="./images/symbol-defs.svg#icon-clock"></use>
               </svg>
 
@@ -86,7 +86,7 @@
               </p>
             </li>
             <li class="columns-item">
-              <svg class="columns-icon">
+              <svg class="columns-icon" width="270px" height="120px">
                 <use href="./images/symbol-defs.svg#icon-diagram"></use>
               </svg>
               <h3 class="hang-title">Планирование</h3>
@@ -96,7 +96,7 @@
               </p>
             </li>
             <li class="columns-item">
-              <svg class="columns-icon">
+              <svg class="columns-icon" width="270px" height="120px">
                 <use href="./images/symbol-defs.svg#icon-astronaut"></use>
               </svg>
               <h3 class="hang-title">Современные технологии</h3>
@@ -135,12 +135,11 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="list-item">
             <li class="scorecard">
-              <img src="./images/team1.jpg" alt="team1" />
+              <img src="./images/team1.jpg" alt="team1"/>
               <div class="team-item">
                 <h3 class="team-worker">Игорь Демьяненко</h3>
                 <p class="team-text">Product Designer</p>
-              </div>
-              <div class="team-icons">
+
                 <ul class="team-icons-list">
                   <li class="team-social-svg">
                     <a href="" class="team-link">
@@ -151,10 +150,7 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
@@ -162,10 +158,7 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
@@ -175,10 +168,7 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
@@ -192,24 +182,22 @@
               </div>
             </li>
             <li class="scorecard">
-              <img src="./images/team2.jpg" alt="team2" />
+              <img src="./images/team2.jpg" alt="team2"/>
               <div class="team-item">
                 <h3 class="team-worker">Ольга Репина</h3>
                 <p class="team-text">Frontend Developer</p>
-              </div>
-              <div class="team-icons">
+
                 <ul class="team-icons-list">
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
@@ -217,25 +205,23 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -247,20 +233,17 @@
               <div class="team-item">
                 <h3 class="team-worker">Николай Тарасов</h3>
                 <p class="team-text">Marketing</p>
-              </div>
-              <div class="team-icons">
                 <ul class="team-icons-list">
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
@@ -268,25 +251,23 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -298,20 +279,17 @@
               <div class="team-item">
                 <h3 class="team-worker">Михаил Ермаков</h3>
                 <p class="team-text">UI Designer</p>
-              </div>
-              <div class="team-icons">
                 <ul class="team-icons-list">
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
@@ -319,25 +297,23 @@
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
-                </ul>
-              </div>
-              <div class="team-icons">
-                <ul class="team-icons-list">
+
                   <li class="team-social-svg">
                     <a href="" class="team-link">
                       <svg class="team-svg">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -347,47 +323,70 @@
           </ul>
         </div>
       </section>
+
       <section class="clients">
-        <div class="clients-block">
+        <div class="container">
           <h2 class="clients-title">Постоянные клиенты</h2>
-          <div class="clients-box">
-            <ul class="clients-list">
-              <li class="clients-item"><svg class="clients-icon">
+          <ul class="clients-list">
+            <li class="clients-item">
+              <svg class="clients-icon">
                 <use href="./images/symbol-defs.svg#icon-yaco"></use>
               </svg>
             </li>
-              <li class="clients-item"></li>
-              <li class="clients-item"></li>
-              <li class="clients-item"></li>
-              <li class="clients-item"></li>
-              <li class="clients-item"></li>
-
-            </ul>
-          </div>
+            <li class="clients-item">
+              <svg class="clients-icon">
+                <use href="./images/symbol-defs.svg#icon-tagline"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon">
+                <use href="./images/symbol-defs.svg#icon-company"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon">
+                <use href="./images/symbol-defs.svg#icon-foster"></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon">
+                <use
+                  href="./images/symbol-defs.svg#icon-company-tag-line"
+                ></use>
+              </svg>
+            </li>
+            <li class="clients-item">
+              <svg class="clients-icon">
+                <use href="./images/symbol-defs.svg#icon-box"></use>
+              </svg>
+            </li>
+          </ul>
         </div>
-
       </section>
-
     </main>
 
     <!-- Footer -->
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <address class="contacts">г. Киев, пр-т Леси Украинки, 26</address>
+        <div class="foo">
 
-        <ul class="contacts-footer">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link mail"
-              >info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="link phone">+38 096 111 11 11</a>
-          </li>
-        </ul>
+          <a href="./index.html" class="logo"
+          ><span class="logo-web">Web</span>Studio</a
+          >
+          <address class="contacts">г. Киев, пр-т Леси Украинки, 26</address>
+          
+          <ul class="contacts-footer">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link mail"
+              >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link phone">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
