--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,29 @@
     <!-- Site header -->
     <header class="header">
       <div class="container">
-          <nav class="navigation">
+        <nav class="navigation">
           <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
-          
+    
           <ul class="site-nav">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link active">Портфолио</a></li>
+            <li><a href="./index.html" class="link active">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
             <li><a href="./" class="link">Контакты</a></li>
           </ul>
           <ul class="contacts-head">
-            <li><a href="mailto:info@devstudio.com" class="link tel">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link phone">+38 096 111 11 11</a></li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="link mail"><svg class="contacts-icon-mail">
+                  <use href="./images/symbol-defs.svg#icon-mail"></use>
+                </svg>info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="link phone"><svg class="contacts-icon-phone">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>+38 096 111 11 11</a>
+            </li>
           </ul>
         </nav>
       </div>
-      </header>
+    </header>
     <main class="main">
       <!-- Main content -->
     <section class="portfolio">
