--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="list-item">
             <li class="scorecard">
-              <img src="./images/team1.jpg" alt="team1"/>
+              <img src="./images/team1.jpg" alt="team1" width="270"/>
               <div class="team-item">
                 <h3 class="team-worker">Игорь Демьяненко</h3>
                 <p class="team-text">Product Designer</p>
@@ -324,41 +324,58 @@
         </div>
       </section>
 
+
+      <!-- Clients -->
+
+
       <section class="clients">
         <div class="container">
-          <h2 class="clients-title">Постоянные клиенты</h2>
+          <h3 class="clients-title">Постоянные клиенты</h3>
           <ul class="clients-list">
             <li class="clients-item">
+              <a href="" class="clients-link">
               <svg class="clients-icon">
-                <use href="./images/symbol-defs.svg#icon-yaco"></use>
+                <use href="./images/symbol-defs.svg#icon-one-1"></use>
               </svg>
+              </a>
             </li>
             <li class="clients-item">
+              <a href="" class="clients-link">
               <svg class="clients-icon">
-                <use href="./images/symbol-defs.svg#icon-tagline"></use>
+                <use href="./images/symbol-defs.svg#icon-two"></use>
               </svg>
+              </a>
             </li>
             <li class="clients-item">
+              <a href="" class="clients-link">
               <svg class="clients-icon">
-                <use href="./images/symbol-defs.svg#icon-company"></use>
-              </svg>
+                <use href="./images/symbol-defs.svg#icon-three"></use>
+              </svg> 
+              </a>
             </li>
             <li class="clients-item">
+              <a href="" class="clients-link">
+              
               <svg class="clients-icon">
-                <use href="./images/symbol-defs.svg#icon-foster"></use>
+                <use href="./images/symbol-defs.svg#icon-four"></use>
               </svg>
+            </a>
             </li>
             <li class="clients-item">
+              <a href="" class="clients-link">
               <svg class="clients-icon">
                 <use
-                  href="./images/symbol-defs.svg#icon-company-tag-line"
+                  href="./images/symbol-defs.svg#icon-five"
                 ></use>
               </svg>
+              </a>
             </li>
             <li class="clients-item">
+              <a href="" class="clients-link">
               <svg class="clients-icon">
-                <use href="./images/symbol-defs.svg#icon-box"></use>
+                <use href="./images/symbol-defs.svg#icon-six"></use>
               </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -369,12 +386,14 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="foo">
-
+        <div class="footer-nav">
+          <ul >
           <a href="./index.html" class="logo"
           ><span class="logo-web">Web</span>Studio</a
           >
-          <address class="contacts">г. Киев, пр-т Леси Украинки, 26</address>
+          <address class="contacts">
+            <a href="#" class="address">
+            г. Киев, пр-т Леси Украинки, 26</a></address>
           
           <ul class="contacts-footer">
             <li>
@@ -386,7 +405,46 @@
               <a href="tel:+380961111111" class="link phone">+38 096 111 11 11</a>
             </li>
           </ul>
+          </ul>
         </div>
+      </div>
+
+<!-- footer join -->
+
+      <div class="join">
+        <section class="join-section">
+          <h3 class="join-title">Присоединяйтесь</h3>
+          <ul class="join-list">
+             <li class="list-social">
+                <a href="#" class="social-svg">
+                  <svg class="social">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="list-social">
+                <a href="#" class="social-svg">
+                  <svg class="social">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="list-social">
+                <a href="#" class="social-svg">
+                  <svg class="social">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="list-social">
+                <a href="#" class="social-svg">
+                  <svg class="social">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+        </section>
       </div>
     </footer>
   </body>
