--- a/index.html
+++ b/index.html
@@ -329,8 +329,10 @@
 
 
       <section class="clients">
+
         <div class="container">
-          <h3 class="clients-title">Постоянные клиенты</h3>
+          <div class="container-company">
+          <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="clients-list">
             <li class="clients-item">
               <a href="" class="clients-link">
@@ -378,6 +380,7 @@
               </a>
             </li>
           </ul>
+          </div>
         </div>
       </section>
     </main>
